--- a/setup.cfg
+++ b/setup.cfg
@@ -32,4 +32,5 @@ classifiers =
 packages = find:
 python_requires = ~=3.4
 install_requires =
+    attrs           ~= 17.1
     python-dateutil ~= 2.6
