Attempt at rewriting with pyparsing

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,4 +32,5 @@ classifiers =
 packages = find:
 python_requires = ~=3.4
 install_requires =
-    attrs ~= 17.1
+    attrs     ~= 17.1
+    pyparsing ~= 2.2
