Update metadata and tox config

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ name = apachelogs
 #version = # Set in setup.py
 description = Parse Apache access logs
 long_description = file:README.rst
+long_description_content_type = text/x-rst
 author = John Thorvald Wodder II
 author_email = apachelogs@varonathe.org
 license = MIT
@@ -30,8 +31,13 @@ classifiers =
     License :: OSI Approved :: MIT License
     ###
 
+project_urls =
+    Source Code = https://github.com/jwodder/apachelogs
+    Bug Tracker = https://github.com/jwodder/apachelogs/issues
+    Say Thanks! = https://saythanks.io/to/jwodder
+
 [options]
 packages = find:
 python_requires = ~=3.4
 install_requires =
-    attrs ~= 17.1
+    attrs >= 17.1
