--- a/tox.ini
+++ b/tox.ini
@@ -5,13 +5,14 @@ skip_missing_interpreters = True
 [testenv]
 usedevelop = True
 deps =
-    pytest~=3.1
+    pytest~=4.0
     pytest-cov~=2.0
-    pytest-flakes~=3.0
+    pytest-flakes~=4.0
 commands = pytest {posargs} apachelogs test
 
 [pytest]
-addopts = --cache-clear --cov=apachelogs --flakes
+addopts = --cache-clear --cov=apachelogs --no-cov-on-fail --flakes
+filterwarnings = error
 
 [coverage:run]
 branch = True
