--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,10 @@ license_file = LICENSE
 url = https://github.com/jwodder/apachelogs
 
 keywords =
-    ###
+    Apache
+    access logs
+    httpd
+    logfiles
 
 classifiers =
     Development Status :: 3 - Alpha
@@ -28,7 +31,10 @@ classifiers =
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     License :: OSI Approved :: MIT License
-    ###
+    Intended Audience :: System Administrators
+    Topic :: Internet :: WWW/HTTP :: HTTP Servers
+    Topic :: System :: Logging
+    Topic :: Text Processing :: Filters
 
 project_urls =
     Source Code = https://github.com/jwodder/apachelogs
