Wrote a basic README

--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,15 @@ deps =
     pytest~=4.0
     pytest-cov~=2.0
     pytest-flakes~=4.0
-commands = pytest {posargs} apachelogs test
+commands = pytest {posargs} apachelogs test README.rst
 
 [pytest]
-addopts = --cache-clear --cov=apachelogs --no-cov-on-fail --flakes
+addopts =
+    --cache-clear
+    --cov=apachelogs
+    --no-cov-on-fail
+    --doctest-modules
+    --flakes
 filterwarnings = error
 
 [coverage:run]
