--- a/tox.ini
+++ b/tox.ini
@@ -25,3 +25,9 @@ branch = True
 [coverage:report]
 precision = 2
 show_missing = True
+
+[testenv:docs]
+basepython = python3
+deps = -rdocs/requirements.txt
+changedir = docs
+commands = sphinx-build -E -W -b html . _build/html
