Slightly expand README

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     pytest~=4.0
     pytest-cov~=2.0
     pytest-flakes~=4.0
-commands = pytest {posargs} apachelogs test README.rst
+commands = pytest {posargs} apachelogs test README.rst docs/index.rst
 
 [pytest]
 addopts =
