--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps =
     pytest~=4.0
     pytest-cov~=2.0
     pytest-flakes~=4.0
+    pytest-mock~=1.6
 commands = pytest {posargs} apachelogs test README.rst docs/index.rst
 
 [pytest]
