Added documentation to Read the Docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ classifiers =
 project_urls =
     Source Code = https://github.com/jwodder/apachelogs
     Bug Tracker = https://github.com/jwodder/apachelogs/issues
+    Documentation = https://apachelogs.readthedocs.io
     Say Thanks! = https://saythanks.io/to/jwodder
 
 [options]
