--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,7 @@ keywords =
     logfiles
 
 classifiers =
-    Development Status :: 3 - Alpha
-    #Development Status :: 4 - Beta
+    Development Status :: 4 - Beta
     #Development Status :: 5 - Production/Stable
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
