Case-insensitive subdicts

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,4 +45,5 @@ project_urls =
 packages = find:
 python_requires = ~=3.5
 install_requires =
-    attrs >= 17.1
+    attrs   >= 17.1
+    pydicti ~= 1.1
