assemble_datetime(): Use certain values for `%Z`

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,8 @@ envlist = py35,py36,py37,pypy3
 skip_missing_interpreters = True
 
 [testenv]
+setenv =
+    TZ=EST5EDT,M3.2.0,M11.1.0
 usedevelop = True
 deps =
     pytest~=4.0
