--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: python
 cache: pip
-jobs:
-    include:
-        - python: 3.5
-        - python: 3.6
-        - python: 3.7
-          dist: xenial
-          sudo: true
-        - python: pypy3
+dist: xenial
+python:
+    - '3.5'
+    - '3.6'
+    - '3.7'
+    - '3.8'
+    - pypy3
 install:
     - pip install codecov tox
 script:
