Switch from pytest-flakes to flake8

--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,15 @@ setenv =
     TZ=EST5EDT,M3.2.0,M11.1.0
 usedevelop = True
 deps =
+    flake8~=3.7
+    flake8-bugbear
+    flake8-builtins~=1.4
     pytest~=5.0
     pytest-cov~=2.0
-    pytest-flakes~=4.0
     pytest-mock~=2.0
-commands = pytest {posargs} apachelogs test README.rst docs/index.rst
+commands =
+    flake8 apachelogs test
+    pytest {posargs} apachelogs test README.rst docs/index.rst
 
 [pytest]
 addopts =
@@ -19,7 +23,6 @@ addopts =
     --cov=apachelogs
     --no-cov-on-fail
     --doctest-modules
-    --flakes
 filterwarnings = error
 
 [coverage:run]
@@ -28,6 +31,28 @@ branch = True
 [coverage:report]
 precision = 2
 show_missing = True
+
+[flake8]
+doctests = True
+exclude = .*/,build/,dist/,venv/
+hang-closing = False
+max-doc-length = 80
+max-line-length = 80
+select = C,B,B950,E,E242,F,W
+
+ignore =
+    B005,
+    E116, E121, E122, E126, E127, E128, E131, E133,
+    E221, E222, E225, E226, E227, E228, E231, E241, E251, E262, E265, E266,
+    E271, E272,
+    E302, E305, E306,
+    E402,
+    E501,
+    E721,
+    W503,
+
+per-file-ignores =
+    test/*.py:B950
 
 [testenv:docs]
 basepython = python3
