Update some testing, linting, & packaging configs

--- a/tox.ini
+++ b/tox.ini
@@ -10,19 +10,16 @@ deps =
     flake8~=3.7
     flake8-bugbear
     flake8-builtins~=1.4
-    pytest~=5.0
+    flake8-import-order-jwodder
+    pytest~=6.0
     pytest-cov~=2.0
-    pytest-mock~=2.0
+    pytest-mock~=3.0
 commands =
     flake8 apachelogs test
     pytest {posargs} apachelogs test README.rst docs/index.rst
 
 [pytest]
-addopts =
-    --cache-clear
-    --cov=apachelogs
-    --no-cov-on-fail
-    --doctest-modules
+addopts = --cov=apachelogs --no-cov-on-fail --doctest-modules
 filterwarnings = error
 
 [coverage:run]
@@ -33,12 +30,14 @@ precision = 2
 show_missing = True
 
 [flake8]
+application-import-names = apachelogs
 doctests = True
 exclude = .*/,build/,dist/,venv/
 hang-closing = False
+import-order-style = jwodder
 max-doc-length = 80
 max-line-length = 80
-select = C,B,B950,E,E242,F,W
+select = C,B,B902,B950,E,E242,F,I,W
 
 ignore =
     B005,
@@ -49,6 +48,7 @@ ignore =
     E402,
     E501,
     E721,
+    I201,
     W503,
 
 per-file-ignores =
