--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ long_description_content_type = text/x-rst
 author = John Thorvald Wodder II
 author_email = apachelogs@varonathe.org
 license = MIT
-license_file = LICENSE
+license_files = LICENSE
 url = https://github.com/jwodder/apachelogs
 
 keywords =
