--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ make = sdist bdist_wheel
 
 [metadata]
 name = apachelogs
-#version = # Set in setup.py
+version = attr:apachelogs.__version__
 description = Parse Apache access logs
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -45,7 +45,12 @@ project_urls =
 
 [options]
 packages = find:
+package_dir =
+    =src
 python_requires = ~=3.5
 install_requires =
     attrs   >= 17.1
     pydicti ~= 1.1
+
+[options.packages.find]
+where = src
