--- a/tox.ini
+++ b/tox.ini
@@ -1,29 +1,40 @@
 [tox]
 envlist = py35,py36,py37,py38,py39,pypy3
 skip_missing_interpreters = True
+isolated_build = True
+minversion = 3.3.0
 
 [testenv]
 setenv =
     TZ=EST5EDT,M3.2.0,M11.1.0
-usedevelop = True
 deps =
+    coverage~=5.0
     flake8~=3.7
     flake8-bugbear
     flake8-builtins~=1.4
     flake8-import-order-jwodder
     pytest~=6.0
-    pytest-cov~=2.0
     pytest-mock~=3.0
 commands =
-    flake8 apachelogs test
-    pytest {posargs} apachelogs test README.rst docs/index.rst
+    flake8 src test
+    coverage erase
+    coverage run -m pytest {posargs} --doctest-modules --pyargs apachelogs
+    coverage run -m pytest {posargs} test README.rst docs/index.rst
+    coverage combine
+    coverage report
 
 [pytest]
-addopts = --cov=apachelogs --no-cov-on-fail --doctest-modules
 filterwarnings = error
 
 [coverage:run]
 branch = True
+parallel = True
+source = apachelogs
+
+[coverage:paths]
+source =
+    src
+    .tox/*/site-packages
 
 [coverage:report]
 precision = 2
