Bring things up to code

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     pytest~=6.0
     pytest-mock~=3.0
 commands =
-    flake8 src test
+    flake8 --config=tox.ini src test
     coverage erase
     coverage run -m pytest {posargs} --doctest-modules --pyargs apachelogs
     coverage run -m pytest {posargs} test README.rst docs/index.rst
