--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38,py39,pypy3
+envlist = lint,py36,py37,py38,py39,pypy3
 skip_missing_interpreters = True
 isolated_build = True
 minversion = 3.3.0
@@ -9,20 +9,25 @@ setenv =
     TZ=EST5EDT,M3.2.0,M11.1.0
 deps =
     coverage~=5.0
-    flake8~=3.7
-    flake8-bugbear
-    flake8-builtins~=1.4
-    flake8-import-order-jwodder
-    flake8-unused-arguments
     pytest~=6.0
     pytest-mock~=3.0
 commands =
-    flake8 --config=tox.ini src test
     coverage erase
     coverage run -m pytest {posargs} --doctest-modules --pyargs apachelogs
     coverage run -m pytest {posargs} test README.rst docs/index.rst
     coverage combine
     coverage report
+
+[testenv:lint]
+skip_install = True
+deps =
+    flake8~=3.7
+    flake8-bugbear
+    flake8-builtins~=1.4
+    flake8-import-order-jwodder
+    flake8-unused-arguments
+commands =
+    flake8 --config=tox.ini src test
 
 [pytest]
 filterwarnings = error
