--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,6 @@ keywords =
     logfiles
 
 classifiers =
-    Development Status :: 4 - Beta
-    #Development Status :: 5 - Production/Stable
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
@@ -42,7 +40,7 @@ project_urls =
 packages = find:
 package_dir =
     =src
-python_requires = ~=3.7
+python_requires = >=3.7
 install_requires =
     attrs   >= 17.1
     pydicti ~= 1.1
