--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,9 @@ minversion = 3.3.0
 setenv =
     TZ=EST5EDT,M3.2.0,M11.1.0
 deps =
-    coverage~=6.0
-    pytest~=7.0
-    pytest-mock~=3.0
+    coverage
+    pytest
+    pytest-mock
 commands =
     coverage erase
     coverage run -m pytest {posargs} --doctest-modules --pyargs apachelogs
@@ -21,9 +21,9 @@ commands =
 [testenv:lint]
 skip_install = True
 deps =
-    flake8~=4.0
+    flake8
     flake8-bugbear
-    flake8-builtins~=1.4
+    flake8-builtins
     flake8-unused-arguments
 commands =
     flake8 src test
@@ -47,12 +47,13 @@ show_missing = True
 
 [flake8]
 doctests = True
-exclude = .*/,build/,dist/,venv/
+exclude = .*/,build/,dist/,test/data,venv/
 hang-closing = False
-max-doc-length = 80
+max-doc-length = 100
 max-line-length = 80
-select = C,B,B902,B950,E,E242,F,I,U100,W
-ignore = B005,E203,E262,E266,E501,I201,W503
+unused-arguments-ignore-stub-functions = True
+select = C,B,B902,B950,E,E242,F,U100,W
+ignore = B005,E203,E262,E266,E501,W503
 
 per-file-ignores =
     test/*.py:B950
