Update Coverage config for v7

--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ source = apachelogs
 [coverage:paths]
 source =
     src
-    .tox/*/site-packages
+    .tox/**/site-packages
 
 [coverage:report]
 precision = 2
