--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Parse Apache access logs"
 readme = "README.rst"
 requires-python = ">=3.8"
 license = "MIT"
-license-files = { paths = ["LICENSE"] }
+license-files = ["LICENSE"]
 authors = [
     { name = "John Thorvald Wodder II", email = "apachelogs@varonathe.org" }
 ]
@@ -32,7 +32,6 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
-    "License :: OSI Approved :: MIT License",
     "Intended Audience :: System Administrators",
     "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
     "Topic :: System :: Logging",
